Fixed animation side shudder by having an always active scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,4 +6,25 @@
 body {
   margin: 0;
   background: white;
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #eee;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ddd;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ccc;
 }
